<resources>
    <string name="app_name">CalculatorApp2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculator">Calculator</string>
    <string name="conversion">Conversion</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="div_10">%</string>
    <string name="mul">x</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="div">/</string>
    <string name="_7">7</string>
    <string name="ac">AC</string>
    <string name="_4">4</string>
    <string name="sub">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="sum">+</string>
    <string name="todo">TODO</string>
    <string name="result">=</string>
    <string name="dec">.</string>
    <string name="_0">0</string>
    <string name="clear">⌫</string>
    <string name="go">GO</string>
</resources>