<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CalculatorFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_30dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_expression"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30dp"
                android:layout_marginEnd="@dimen/_30dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_36sp" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30dp"
                android:layout_marginTop="@dimen/_30dp"
                android:layout_marginEnd="@dimen/_30dp"
                android:gravity="end"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="@dimen/_36sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_ac"
                style="@style/buttonOperator"
                android:text="@string/ac" />

            <TextView
                android:id="@+id/btn_clear"
                style="@style/buttonOperator"
                android:text="@string/clear" />

            <TextView
                android:id="@+id/btn_div_10"
                style="@style/buttonOperator"
                android:text="" />

            <TextView
                android:id="@+id/btn_div"
                style="@style/buttonOperator"
                android:text="@string/div" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_7"
                style="@style/buttonNumber"
                android:text="@string/_7" />

            <TextView
                android:id="@+id/btn_8"
                style="@style/buttonNumber"
                android:text="@string/_8" />

            <TextView
                android:id="@+id/btn_9"
                style="@style/buttonNumber"
                android:text="@string/_9" />

            <TextView
                android:id="@+id/btn_mul"
                style="@style/buttonOperator"
                android:text="@string/mul" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_6"
                style="@style/buttonNumber"
                android:text="@string/_6" />

            <TextView
                android:id="@+id/btn_5"
                style="@style/buttonNumber"
                android:text="@string/_5" />

            <TextView
                android:id="@+id/btn_4"
                style="@style/buttonNumber"
                android:text="@string/_4" />

            <TextView
                android:id="@+id/btn_sub"
                style="@style/buttonOperator"
                android:text="@string/sub" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_3"
                style="@style/buttonNumber"
                android:text="@string/_3" />

            <TextView
                android:id="@+id/btn_2"
                style="@style/buttonNumber"
                android:text="@string/_2" />

            <TextView
                android:id="@+id/btn_1"
                style="@style/buttonNumber"
                android:text="@string/_1" />

            <TextView
                android:id="@+id/btn_sum"
                style="@style/buttonOperator"
                android:text="@string/sum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/buttonNumber"
                android:text="" />

            <TextView
                android:id="@+id/btn_0"
                style="@style/buttonNumber"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/btn_dec"
                style="@style/buttonNumber"
                android:text="@string/dec"
                android:textColor="@color/carrot"
                android:textSize="@dimen/_36sp" />

            <TextView
                android:id="@+id/btn_result"
                style="@style/buttonOperator"
                android:text="@string/result" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>